[tool.poetry]
name = "ie-netbox-importer"
version = "0.1.0"
description = "Import data into Netbox from various APIs"
authors = ["Ricky Laney"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
