[tool.poetry]
name = "nettopo"
version = "0.1.4"
description = "Replace this"
authors = ["Ricky Laney <rlaneyjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
Jinja2 = "^2.11.3"
alive-progress = "^1.6.2"
netaddr = "^0.8.0"
netifaces = "^0.10.9"
pydot = "^1.4.2"
pysnmp = "^4.4.12"
snmpsysdescrparser = "^0.1.20"
tabulate = "^0.8.7"
about-time = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipdb = "^0.13.4"
mypy-extensions = "^0.4.3"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
