[tool.poetry]
name = "nettopo"
version = "0.1.4"
description = "Replace this"
authors = ["Ricky Laney <rlaneyjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
Jinja2 = "^2.11.3"
alive-progress = "^1.6.2"
netaddr = "^0.8.0"
netifaces = "^0.10.9"
pydot = "^1.4.2"
pysnmp = "^4.4.12"
snmpsysdescrparser = "^0.1.20"
tabulate = "^0.8.7"
about-time = "^3.1.1"
N2G = "^0.1.2"
python-igraph = "^0.9.1"
scapy = "^2.4.4"
python-nmap = "^0.6.4"
puresnmp = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipdb = "^0.13.4"
mypy-extensions = "^0.4.3"
pycodestyle = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
